--- a/Crimson.UI/Crimson.UI.csproj
+++ b/Crimson.UI/Crimson.UI.csproj
@@ -10,6 +10,7 @@
      <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+     <PackageReference Include="SpriteFontPlus" Version="0.8.0.37" />
   </ItemGroup>
 
   <ItemGroup>
