--- a/Crimson.UI/Crimson.UI.csproj
+++ b/Crimson.UI/Crimson.UI.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
-      <PrivateAssets>All</PrivateAssets>
-    </PackageReference>
+    <ProjectReference Include="..\Crimson\Crimson.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Crimson\Crimson.csproj" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1375-develop" />
   </ItemGroup>
 
 </Project>
