--- a/Crimson/Crimson.csproj
+++ b/Crimson/Crimson.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>8</LangVersion>
-    <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <LangVersion>8</LangVersion>
+        <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
 
-  <ItemGroup>
-     <PackageReference Include="ImGui.NET" Version="1.75.0" />
-     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1375-develop" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="ImGui.NET" Version="1.75.0" />
+        <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
+            <PrivateAssets>All</PrivateAssets>
+        </PackageReference>
+    </ItemGroup>
 
 </Project>
