--- a/Crimson/Crimson.csproj
+++ b/Crimson/Crimson.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
             <PrivateAssets>All</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="System.Memory" Version="4.5.4" />
     </ItemGroup>
 
 </Project>
