--- a/Crimson/Crimson.csproj
+++ b/Crimson/Crimson.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="ImGui.NET" Version="1.75.0" />
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
         <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
             <PrivateAssets>All</PrivateAssets>
         </PackageReference>
