Remove params from AI tag and generics in Behavior Tree Nodes

--- a/Crimson.XmlPipeline/Crimson.XmlPipeline.csproj
+++ b/Crimson.XmlPipeline/Crimson.XmlPipeline.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="MonoGame.Framework.Content.Pipeline.Portable" Version="3.7.1.189" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Crimson\Crimson.csproj" />
+  </ItemGroup>
+
 </Project>
