--- a/Crimson/Crimson.csproj
+++ b/Crimson/Crimson.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
             <PrivateAssets>All</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="OptimizedPriorityQueue" Version="4.2.0" />
         <PackageReference Include="System.Memory" Version="4.5.4" />
     </ItemGroup>
 
