--- a/Crimson.UI/Crimson.UI.csproj
+++ b/Crimson.UI/Crimson.UI.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.*">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
