--- a/Crimson/Crimson.csproj
+++ b/Crimson/Crimson.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <LangVersion>8</LangVersion>
         <Nullable>enable</Nullable>
         <NullableReferenceTypes>true</NullableReferenceTypes>
@@ -11,8 +11,8 @@
     <ItemGroup>
         <PackageReference Include="ImGui.NET" Version="1.75.0" />
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-        <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7">
-            <PrivateAssets>All</PrivateAssets>
+        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.*">
+          <PrivateAssets>All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="OptimizedPriorityQueue" Version="4.2.0" />
         <PackageReference Include="System.Memory" Version="4.5.4" />
