--- a/Crimson/Crimson.csproj
+++ b/Crimson/Crimson.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ImGui.NET" Version="1.75.0" />
+        <PackageReference Include="ImGui.NET" Version="1.78.0" />
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.*">
           <PrivateAssets>All</PrivateAssets>
