--- a/Crimson.YarnSpinnerPipeline/Crimson.YarnSpinnerPipeline.csproj
+++ b/Crimson.YarnSpinnerPipeline/Crimson.YarnSpinnerPipeline.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
-        <LangVersion>8</LangVersion>
+        <TargetFramework>net6.0</TargetFramework>
+        <LangVersion>10</LangVersion>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MonoGame.Framework.Content.Pipeline.Portable" Version="3.7.1.189" />
-      <PackageReference Include="YarnSpinner" Version="1.2.0" />
-      <PackageReference Include="YarnSpinner.Compiler" Version="1.2.0" />
+      <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.1.303" />
+      <PackageReference Include="YarnSpinner" Version="2.4.2" />
+      <PackageReference Include="YarnSpinner.Compiler" Version="2.4.2" />
     </ItemGroup>
 
     <ItemGroup>
