--- a/Crimson/Crimson.csproj
+++ b/Crimson/Crimson.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
-        <LangVersion>8</LangVersion>
+        <TargetFramework>net6.0</TargetFramework>
+        <LangVersion>10</LangVersion>
         <Nullable>enable</Nullable>
         <NullableReferenceTypes>true</NullableReferenceTypes>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ImGui.NET" Version="1.78.0" />
+        <PackageReference Include="ImGui.NET" Version="1.90.1.1" />
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.*">
+        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303">
           <PrivateAssets>All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="OptimizedPriorityQueue" Version="5.1.0" />
-        <PackageReference Include="System.Memory" Version="4.5.4" />
+        <PackageReference Include="System.Memory" Version="4.5.5" />
     </ItemGroup>
 
 </Project>
